--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="capitalize">
         <div class="top green">
             <h1>Fromage.com</h1>
-            <h2>It's the cheesiest site on the web.</h2>
+            <h2>It's the cheesiest site on the web</h2>
         </div>
         <nav>
             <ul>
