Added skip to content link for accessibility.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <!-- Added for accessibility -->
+    <a href="#content" class="offscreen">Skip to content</a>
     <header class="capitalize">
         <div class="top green">
             <h1>Fromage.com</h1>
@@ -39,7 +41,7 @@
         <div class="box blue"></div>
     </div>
 
-    <article>
+    <article id="content">
         <h3 class="capitalize">This is where your headline goes</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ex non odio pulvinar pharetra at nec lectus. Donec at ante ac magna elementum lacinia sagittis quis augue. Sed commodo urna sit amet accumsan mattis. Fusce sagittis elit in accumsan vehicula. Nunc neque libero, bibendum et ex quis, tempor aliquam lorem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Sed vel nisl id neque condimentum aliquet sit amet ac mi. Phasellus eros eros, porta non pharetra nec, egestas sit amet tortor. Aenean scelerisque, orci sit amet molestie congue, nibh mauris luctus magna, ac semper diam erat nec sapien. Integer viverra arcu ac enim vehicula vestibulum. Duis venenatis vestibulum porta. Sed vehicula consectetur dolor, congue tempor nulla congue ut. Etiam ut facilisis mauris. Pellentesque suscipit ante et magna suscipit blandit. Pellentesque maximus sem risus, in lacinia arcu venenatis a.</p>
         <p>Curabitur auctor sed ante non porta. Donec vitae nisi ornare, pharetra est quis, porta lorem. Quisque ultrices est vitae posuere posuere. Aliquam suscipit tempor cursus. Donec et elit ultrices, fringilla tellus a, iaculis nisi. Phasellus ornare pretium nibh, vitae eleifend lectus dictum vitae. Curabitur id porta lectus, quis egestas leo. Pellentesque et purus non elit sagittis lacinia a nec quam.</p>
